--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <dependencies>
         <dependency>
             <groupId>org.picketbox</groupId>
-            <artifactId>vault-bare</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>picketbox</artifactId>
+            <version>4.1.1.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
