--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,8 @@
     <dependencies>
         <dependency>
             <groupId>org.picketbox</groupId>
-            <artifactId>picketbox</artifactId>
-            <version>4.1.1.Final</version>
-            <scope>provided</scope>
+            <artifactId>vault-bare</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
