--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>jboss-logging</artifactId>
             <version>3.2.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.modules</groupId>
+            <artifactId>jboss-modules</artifactId>
+            <version>1.3.3.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
