--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.apache.tomcat</groupId>
     <artifactId>vault-tomcat</artifactId>
-    <version>1.0.1.Final-SNAPSHOT</version>
+    <version>1.0.2.Final-SNAPSHOT</version>
     <name>Tomcat Vault extension</name>
     <dependencies>
         <dependency>
@@ -48,6 +48,21 @@
             <artifactId>jboss-modules</artifactId>
             <version>1.3.3.Final</version>
         </dependency>
+	<dependency>
+	    <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+	    <version>1.2</version>
+        </dependency>
+	<dependency>
+	  <groupId>org.jboss.as</groupId>
+	  <artifactId>jboss-as-security</artifactId>          
+	  <version>7.4.0.Final-redhat-19</version>
+        </dependency>
+	<dependency>
+	  <groupId>org.hibernate.javax.persistence</groupId>
+	  <artifactId>hibernate-jpa-2.0-api</artifactId>
+	  <version>1.0.1.Final</version>
+	</dependency>
     </dependencies>
 
     <build>
