--- a/pom.xml
+++ b/pom.xml
@@ -21,116 +21,21 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.spec.javax.security.jacc</groupId>
-            <artifactId>jboss-jacc-api_1.4_spec</artifactId>
-            <version>1.0.1.Final</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>sun-jaxb</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>3.2.1.Final</version>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.modules</groupId>
-            <artifactId>jboss-modules</artifactId>
-            <version>1.3.3.Final</version>
+	<dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging-processor</artifactId>
+            <version>1.0.3.Final</version>
+            <scope>provided</scope>
         </dependency>
 	<dependency>
 	    <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
 	    <version>1.2</version>
         </dependency>
-	<dependency>
-	  <groupId>org.jboss.as</groupId>
-	  <artifactId>jboss-as-security</artifactId>          
-	  <version>7.2.0.Final</version>
-       <exclusions>
-            <exclusion>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.msc</groupId>
-                <artifactId>jboss-msc</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-domain-management</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-server</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-naming</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-clustering-infinispan</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-transactions</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.logging</groupId>
-                <artifactId>jboss-logging</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.logging</groupId>
-                <artifactId>jboss-logging-processor</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.security</groupId>
-                <artifactId>jboss-negotiation-extras</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.security</groupId>
-                <artifactId>jboss-negotiation-spnego</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.picketbox</groupId>
-                <artifactId>picketbox</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.spec.javax.security.jacc</groupId>
-                <artifactId>jboss-jacc-api_1.4_spec</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.picketbox</groupId>
-                <artifactId>picketbox-infinispan</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.picketbox</groupId>
-                <artifactId>picketbox-commons</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-subsystem-test</artifactId>
-            </exclusion>
-       </exclusions>
-    </dependency>
-	<dependency>
-	  <groupId>org.hibernate.javax.persistence</groupId>
-	  <artifactId>hibernate-jpa-2.0-api</artifactId>
-	  <version>1.0.1.Final</version>
-	</dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
