--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
             <artifactId>commons-cli</artifactId>
 	    <version>1.2</version>
         </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
