Refactor jboss-module

--- a/pom.xml
+++ b/pom.xml
@@ -57,33 +57,12 @@
                             <outputDirectory>${project.basedir}/modules/system/layers/base/tomcat-vault/main</outputDirectory>
                             <finalName>tomcat-vault</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.10</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.jboss.modules</groupId>
-                                    <artifactId>jboss-modules</artifactId>
-                                    <version>1.3.3.Final</version>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>./</outputDirectory>
-                                    <destFileName>jboss-modules.jar</destFileName>
-                                </artifactItem>
-                            </artifactItems>
+			    <archive>
+		              <manifest>
+		                <addClasspath>true</addClasspath>
+		                <mainClass>org.jboss.modules.Main</mainClass>
+		              </manifest>
+		            </archive>
                         </configuration>
                     </execution>
                 </executions>
