--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.apache.tomcat</groupId>
-    <artifactId>vault-tomcat</artifactId>
+    <artifactId>tomcat-vault</artifactId>
     <version>1.0.8.Final</version>
     <name>Tomcat Vault extension</name>
     <dependencies>
