--- a/pom.xml
+++ b/pom.xml
@@ -8,34 +8,39 @@
     <artifactId>tomcat-vault</artifactId>
     <version>1.0.8.Final</version>
     <name>Tomcat Vault extension</name>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-util</artifactId>
-            <version>8.0.15</version>
-            <scope>provided</scope>
+            <version>8.0.44</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-juli</artifactId>
+            <version>8.0.44</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>3.2.1.Final</version>
         </dependency>
-	<dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging-processor</artifactId>
             <version>1.0.3.Final</version>
             <scope>provided</scope>
         </dependency>
-	<dependency>
-	    <groupId>commons-cli</groupId>
+        <dependency>
+            <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-	    <version>1.2</version>
+            <version>1.2</version>
         </dependency>
-	<dependency>
-	    <groupId>org.jboss.modules</groupId>
+        <dependency>
+            <groupId>org.jboss.modules</groupId>
             <artifactId>jboss-modules</artifactId>
             <version>1.3.3.Final</version>
-	</dependency>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -54,12 +59,12 @@
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
-			    <archive>
-		              <manifest>
-		                <addClasspath>true</addClasspath>
-		                <mainClass>org.jboss.modules.Main</mainClass>
-		              </manifest>
-		            </archive>
+                            <archive>
+                              <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>org.jboss.modules.Main</mainClass>
+                              </manifest>
+                            </archive>
                         </configuration>
                     </execution>
                 </executions>
