Add intellij files to gitignore and update maven clean to remove tomcat-vault.jar copied from target

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,20 @@
                       </execution>
                    </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/modules/system/layers/base/tomcat-vault/main/</directory>
+                            <includes>
+                                <include>tomcat-vault.jar</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <repositories>
