Remove logic to get class information from JBoss Modules as they don't exist in tomcat and were therefore useless. That is the last jboss dependency that we had!

--- a/src/main/resources/org/apache/tomcat/vault/security/resources/LocalStrings.properties
+++ b/src/main/resources/org/apache/tomcat/vault/security/resources/LocalStrings.properties
@@ -16,7 +16,7 @@
 invalidNullArgument=Argument [{0}] cannot be null
 invalidNullOrEmptyOptionMap=Options map [{0}] is null or empty
 invalidNullOrEmptyOptionMessage=Option [{0}] is null or empty
-invalidKeystorePasswordFormatMessage=Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}, {CLASS}
+invalidKeystorePasswordFormatMessage=Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}
 unableToEncryptDataMessage=Unable to encrypt data
 unableToWriteVaultDataFileMessage=Unable to write vault data file ([{0}])
 vaultDoesnotContainSecretKey=Security Vault does not contain SecretKey entry under alias ([{0}])
@@ -40,4 +40,3 @@ pbeUtilsMessage=Ecrypt a password using the JaasSecurityDomain password\n\n\
   password : the plaintext password that should be encrypted with the JaasSecurityDomain password
 invalidPasswordCommandType=Invalid password command type: [{0}]
 loadingNullorEmptyClass=Trying to load null or empty class
-unableToLoadPasswordClass=Unable to load password class ([{0}]). Try to specify module to load class from using '{CLASS@module}class_name'
