Replace 'null input buffer' message from Cipher.doFinal() with more informative message by catching empty vault data before passing to Cipher, logging it, and throwing an exception

--- a/src/main/resources/org/apache/tomcat/vault/security/vault/LocalStrings.properties
+++ b/src/main/resources/org/apache/tomcat/vault/security/vault/LocalStrings.properties
@@ -19,6 +19,7 @@ picketBoxSecurityVault.ambiguosKeyForSecurityVaultTransformation=Ambiguous vault
 picketBoxSecurityVault.cannotDeleteOriginalVaultFile=Cannot delete original Security Vault file ([{0}]). Delete the file manually before next start, please.
 picketBoxSecurityVault.keyStoreConvertedToJCEKS=Security Vault key store successfuly converted to JCEKS type ([{0}]). From now on use JCEKS as KEYSTORE_TYPE in Security Vault configuration.
 picketBoxSecurityVault.vaultDoesNotContainSecretKey=Security Vault does not contain SecretKey entry under alias ([{0}])
+picketBoxSecurityVault.attributeNotInVault=Data not found in alias ({0}) for VAULT::{1}::{2}::
 
 securityVaultFactory.attemptToCreateSecondVault=Attempt to create the second Security Vault [[{0}]] is invalid. Only one Security Vault is supported. Change your configuration, please.
 
