--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
     	<repository>
           <id>jboss-public-jboss-repo-group</id>
           <name>JBoss Public Repository Group</name>
-       	  <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+          <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
@@ -114,7 +114,7 @@
         <pluginRepository>
             <id>jboss-public-jboss-repo-group</id>
             <name>JBoss Public Repository Group</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
         </pluginRepository>
     </pluginRepositories>
 </project>
