--- a/examples/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/webapp/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 		<filter-name>ExampleFilter</filter-name>
 		<filter-class>org.tomcat.example.MyFilter</filter-class>
 		<init-param>
-		<param-name>vault-param</param-name>
+		<param-name>vault.param</param-name>
 		<param-value>${VAULT::my_block::manager_password::}</param-value>
 	</init-param>
 	</filter>
