Update tomcat version and use 1.6 for compiler source/target.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
     <name>Vault extension for Apache Tomcat</name>
 
     <properties>
-        <tomcat.version>9.0.19</tomcat.version>
+        <tomcat.version>9.0.50</tomcat.version>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
 
     <dependencies>
