Add a test for FIPS as PBE is not allowed in FIPS.

--- a/src/main/resources/org/apache/tomcat/vault/security/resources/LocalStrings.properties
+++ b/src/main/resources/org/apache/tomcat/vault/security/resources/LocalStrings.properties
@@ -40,3 +40,4 @@ pbeUtilsMessage=Ecrypt a password using the JaasSecurityDomain password\n\n\
   password : the plaintext password that should be encrypted with the JaasSecurityDomain password
 invalidPasswordCommandType=Invalid password command type: [{0}]
 loadingNullorEmptyClass=Trying to load null or empty class
+cantdoFIPS=Security Vault can't be used in FIPS mode.
